--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Kalyani Kavathekar
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Agile Certified Practitioner (PMI-ACP) with over 16 years of experience in Program Management, Project Management, Web Application Development and Leadership
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
