--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Kalyani Kavathekar
-logo: /assets/img/logo.png
-description: Agile Certified Practitioner (PMI-ACP) with over 16 years of experience in Program Management, Project Management, Web Application Development and Leadership
+logo: /assets/img/logo.jpg
+description: Agile Certified Practitioner (PMI-ACP) with over 16 years of experience  
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
